# comfortflow

./: .gitignore  docker-compose.yml  pyproject.toml
config/base/: parameters.yml
monitoring/prometheus/: prometheus.yml
paper/: main.tex
scripts/: collect_energy_data.py  evaluate_controllers.py  load_ashrae_to_bronze.py  run_pipeline.py  run_shap.py  sync_to_minio.py  train_all_models.py  train_energy_models.py  train_ppo.py  train_with_radiant_temp.py  train_xgboost.py
src/comfortflow/: config.py
src/comfortflow/adapters/control/: pid_controller.py  rule_based_controller.py
src/comfortflow/adapters/ml/: ann_comfort.py  dnn_comfort.py  fuzzy_comfort.py  lstm_energy.py  model_selector.py  random_forest_comfort.py  svm_comfort.py  xgboost_comfort.py  xgboost_energy.py
src/comfortflow/adapters/monitoring/: prometheus_metrics.py
src/comfortflow/adapters/storage/: ashrae_loader.py  energy_repository.py  minio_client.py  parquet_repository.py
src/comfortflow/api/: dependencies.py  main.py  schemas.py
src/comfortflow/api/routes/: comfort.py  models.py
src/comfortflow/application/: train_comfort_model.py
src/comfortflow/domain/comfort/: entities.py  pmv.py  protocols.py
src/comfortflow/domain/control/: entities.py  protocols.py  reward.py
src/comfortflow/spark_jobs/: bronze_to_silver.py  silver_to_gold.py  spark_session.py
tests/integration/: test_ashrae_loader.py
tests/unit/: test_model_selector.py
tests/unit/application/: test_train_comfort_model.py
tests/unit/domain/: test_entities.py  test_pmv.py  test_reward.py
(+5 files in other folders)
