[project]
name = "comfortflow"
version = "0.1.0"
description = "End-to-end ML pipeline for building thermal comfort and energy efficiency"
requires-python = ">=3.11"

dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pythermalcomfort>=3.9",
]

[project.optional-dependencies]
ml = [
    "torch>=2.1",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "scikit-fuzzy>=0.5",
    "shap>=0.44",
    "stable-baselines3>=2.2",
    "mlflow>=2.10",
    "optuna>=3.5",
]
spark = [
    "pyspark>=3.5",
]
api = [
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "httpx>=0.26",
]
federation = [
    "flwr>=1.7",
]
monitoring = [
    "prometheus-client>=0.20",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.2",
    "mypy>=1.8",
]
all = [
    "comfortflow[ml,spark,api,federation,monitoring,dev]",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
